1.2.0 Aug 30th 2007
	- Fix segfault issue if GeoIP.dat file cannot be opened (Vladimir Sedlacek)
	- Added support for GEOIP_CONTINENT_CODE for GeoIP Country and City (Frank Mather)
	- Added GeoIPScanProxyHeaders directive to handle X-Forwarded-For headers (Frank Mather)
	- Updated documentation to specify that GeoIPFlags need to be passed
	  as second parameter to GeoIPDBFile, instead of using the GeoIPFlags directive

1.1.8 Apr 28th 2006
	- Updated README file with GeoIPFlags docs and performance tips
	- Added apr_strings.h include (Dann Frazier, Fixes Debian #357387)
	- Added support for IndexCache

1.1.7 Aug 1st 2005
	- Copied docs in mod_geoip1.3 in README on how to redirect and block by country
	- Fixed Garbage characters appearing in GeoIP Postal Code field, this
          bug was introduced in 1.1.3

1.1.6 May 17th 2005
	- Fixed empty fields for GeoIP Region fields, this bug
	  was introduced in 1.1.3

1.1.5 Apr 19th 2005
	- Removed dependence on DNS resolver for GeoIP Region and Netspeed databases

1.1.4 Dec 23rd 2004
	- Fixed Garbage characters appearing in GeoIP City/Region field, this
	  bug was introduced in 1.1.3

1.1.3 Dec  9th 2004
	- Added support for GeoIPOutput
	- Changed command setup to AP_INIT_TAKE12 from AP_INIT_TAKE1 GeoIPDBFile (merv)
	- Memory Leak fix when using GeoIP Region database
	- Memory Leak fix when using GeoIP City database (Shane Nelson)

1.1.2 Aug 12th 2004
	- Added support for GeoIP Netspeed Edition ( Frank Mather )
	- Added support for GeoIP City setting GEOIP_DMA_CODE, GEOIP_AREA_CODE, GEOIP_LATITUDE,
		GEOIP_LONGITUDE, and GEOIP_POSTAL_CODE ( Frank Mather )

1.1.1 Jul 12th 2004
	- Added more documentation for using from PHP
	- Fixed compile errors and warnings

1.1.0 Apr 19th 2004
	- Added support for GeoIP Region, City, ISP and Organization ( Frank Mather )

1.0.6 Aug 30th 2002
	- Added GeoIP_delete upon cleanup ( Corris Randall )

1.0.5 Aug 29th 2002
	- Initial Release ( Corris Randall )