@@ -1,3 +1,5 @@
+	- Added support for UTF8 output for GeoIP City databases
+
 1.2.0 Aug 30th 2007
 	- Fix segfault issue if GeoIP.dat file cannot be opened (Vladimir Sedlacek)
 	- Added support for GEOIP_CONTINENT_CODE for GeoIP Country and City (Frank Mather)
